src/objects/LittleBitsDeviceSubscription__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <inlineHelpText>Optional, if the LittleBits API Custom Setting is configured.</inlineHelpText>
        <label>Access Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeviceID__c</fullName>
        <label>Device ID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <inlineHelpText>Manage the subscriptions with the device by clicking the Manage button.</inlineHelpText>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>amplitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amplitude:delta:sustain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amplitude:delta:ignite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amplitude:delta:release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amplitude:delta:nap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amplitude:level:active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amplitude:level:idle</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FlowName__c</fullName>
        <inlineHelpText>Name of the Automation Flow to call when the Device events fire. Declare zero or more of the following input variables in the Flow. lbc_subscriptionRecordId, lbc_type, lbc_timestamp, lbc_user_id, lbc_bit_id, lbc_payload_percent or lbc_payload_delta</inlineHelpText>
        <label>Flow Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunAsUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User must be the Context User for an active Inbound Email Service setup in this org called LittleBitsSubscriberInboundEmailHandler and using the LittleBitsSubscriberInboundEmailHandler class from this package.</inlineHelpText>
        <label>Run As User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LittleBits_Device_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LittleBits Device Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>DeviceID__c</columns>
        <columns>Event__c</columns>
        <columns>FlowName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LittleBits Subscriptions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LittleBits Device Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>